--- a/doc/config/build.xml
+++ b/doc/config/build.xml
@@ -8,7 +8,7 @@
 		se quiera compilar
 	-->
 	
-	<property name="test-file-name" value="testCase02.hu"/>
+	<property name="test-file-name" value="testCase.hu"/>
 	
 	<property name="lib" location="lib"/>
 	<property name="test" location="doc/test"/>
